Refine insights and recommendations in analysis notebook
Updated key insights and management recommendations to provide clearer and more actionable procurement analysis.

--- a/PURCHASE_ANALYSIS.ipynb
+++ b/PURCHASE_ANALYSIS.ipynb
@@ -785,11 +785,11 @@
    "source": [
     "## 11. Key Insights\n",
     "\n",
-    "- Monthly procurement trend shows peaks in certain months indicating seasonal demand.\n",
-    "- Department A accounts for highest spend — review procurement strategy\n",
-    "- Top 10 vendors cover majority of spend — negotiate for better terms.\n",
-    "- High priority orders account for a significant percentage — monitor urgent purchases.\n",
-    "- Delivery and payment delays need attention to improve operational efficiency.\n"
+    "- Monthly procurement trends show clear spend peaks in specific months, indicating seasonal demand and planning gaps.\n",
+    "- Certain departments contribute disproportionately to total procurement spend, requiring closer budget oversight.\n",
+    "- The top 10 vendors account for a majority of total procurement spend, creating vendor dependency and negotiation risk.\n",
+    "- High-priority purchase orders (~27%) exceed best-practice levels, indicating reactive procurement behavior.\n",
+    "- Delivery and payment delays show variability, posing risks to production continuity and vendor relationships.\n"
    ]
   },
   {
@@ -799,11 +799,11 @@
    "source": [
     "## 12. Management Recommendations\n",
     "\n",
-    "1. Negotiate contracts with top-spending vendors for better pricing.\n",
-    "2. Optimize procurement planning for high-demand months.\n",
-    "3. Review high-spend departments and enforce budgetary control.\n",
-    "4. Improve delivery and payment processes to reduce delays.\n",
-    "5. Monitor high-priority orders to ensure urgent requirements are fulfilled efficiently.\n"
+    "1. Negotiate long-term rate contracts with top-spending vendors and identify alternate suppliers to reduce dependency risk.\n",
+    "2. Strengthen demand forecasting and monthly procurement planning for high-spend periods to minimize emergency purchases.\n",
+    "3. Introduce department-level procurement budgets and conduct monthly variance reviews for high-spend departments.\n",
+    "4. Implement vendor delivery and payment performance tracking to reduce operational delays.\n",
+    "5. Enforce approval controls for high-priority orders and target reducing their share to below 15–20%.\n"
    ]
   },
   {
